--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@
 .flex{
     display: flex;
 }
+
+.flex-col{
+    display: flex;
+    flex-direction: column;
+}
 /*Fine common*/
 
 /*Inizio header*/
@@ -51,6 +56,80 @@ header{
 
 /*Inizio main*/
 main{
-    margin-top: 80px;
+    margin-top: 70px;
+    margin-bottom: 80px;
+    width: 100vw;
+    background-color: black;
+}
+
+.participants{
+    flex-basis: 90%;
+    margin: auto;
+    justify-content: center;
+    align-content: flex-start;
+    height: 100%;
+}
+
+.person-container{
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.person{
+    margin: 5px;
+    justify-content: flex-start;
+    align-items: flex-end;
+}
+
+.camera{
+    position: relative;
+}
+
+.username{
+    padding: 10px;
+    position: absolute;
+    color: white;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(160, 160, 160, 0.5)
 }
 /*Fine main*/
+
+/*Inizio Footer*/
+footer{
+    height: 120px;
+    justify-content: space-between;
+}
+
+.functions{
+    height: 100%;
+    flex-basis: 90%;
+    background-color: black;
+    justify-content: space-between;
+}
+
+.end-meeting{
+    justify-content: center;
+    align-items: center;
+    flex-basis: 10%;
+    background-color: rgb(74, 74, 74);
+    color: red;
+}
+
+.audio-video{
+    color: white;
+    flex-basis: 30%;
+    height: 100%;
+    background-color: red;
+}
+.icons{
+    flex-basis: 70%;
+    height: 100%;
+    background-color: blue;
+}
+
+.mic{
+    margin-left: 10px;
+}
+/*Fine Footer*/
