--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ main{
 
 /*Inizio Footer*/
 footer{
+    min-width: 1200px;
     height: 120px;
     justify-content: space-between;
 }
@@ -119,17 +120,40 @@ footer{
 
 .audio-video{
     color: white;
-    flex-basis: 30%;
+    flex-basis: 20%;
     height: 100%;
-    background-color: red;
+    background-color: rgb(34, 34, 34);
+    align-items: center;
 }
-.icons{
-    flex-basis: 70%;
+
+.icons-container{
+    color: white;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 80%;
     height: 100%;
-    background-color: blue;
+    background-color: rgb(34, 34, 34);
 }
 
 .mic{
     margin-left: 10px;
+}
+
+.icon-big {
+    font-size: 40px;
+    margin-bottom: 10px;
+}
+
+.menu-voice{
+    margin-right: 15px;
+    align-items: center;
+}
+
+#green-icon{
+    color: rgb(74, 199, 4);
+}
+
+#invite{
+    align-items: flex-start;
 }
 /*Fine Footer*/
